<resources>

    <string name="base_url">https://ieeeevento.herokuapp.com/</string>

    <string name="app_name">Evento</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="scan_event_qr_code">Scan Event QR Code</string>
    <string name="scan_event_or">OR</string>
    <string name="event_id_prompt">Do you have an Event ID?</string>
    <string name="event_id_hint">Event ID</string>
    <string name="enter_event_button">Let\'s Go!</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="swipe_up_text">Swipe Up to </string>
    <string name="sign_in_button">Sign In</string>
    <string name="password_hint">Password</string>
    <string name="email_id_hint">Email</string>
    <string name="sign_in_to_continue_text">Sign In To Continue</string>
    <string name="welcome_onboarding_text">Welcome!</string>
    <string name="click_next_to_continue_onboarding_text">Click next to continue</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="enter_email_hint">Enter your Email</string>
    <string name="enter_name_hint">Tell us your Name</string>
    <string name="enter_contact_hint">We can Contact you at?</string>
    <string name="enter_username_hint">Choose a Cool Username</string>
    <string name="enter_password_hint">Create a Password</string>
    <string name="re_enter_password_hint">Remember your Password?</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="speakers_text">Speakers</string>
    <string name="sponsors_text">Sponsors and Partners</string>
    <string name="login_signup_button_text">Login/Signup</string>
    <string name="timeline_title">Timeline</string>
    <string name="profile_title">Profile</string>
    <string name="scannables_title">Scannables</string>
    <string name="faq_title">FAQ</string>
    <string name="information_title">Information</string>
    <string name="more_info_title">More Info</string>
    <string name="about_ieee_vit_title">About IEEE-VIT</string>
    <string name="licenses_text"><u>LICENSES</u></string>

</resources>
