<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/signupScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:background="@drawable/double_rounded_rectangle_background"
        android:elevation="48dp"
        android:orientation="vertical"
        android:transitionName="SwipeUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_loading_screen">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_expand_less_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/sign_up_label"
            android:textColor="#2196F3"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp">

                    <EditText
                        android:id="@+id/et_email_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:ellipsize="start"
                        android:hint="@string/enter_email_hint"
                        android:inputType="textEmailAddress"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp">

                    <EditText
                        android:id="@+id/et_name_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:ellipsize="start"
                        android:hint="@string/enter_name_hint"
                        android:inputType="textCapWords"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp">

                    <EditText
                        android:id="@+id/et_phone_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:ellipsize="start"
                        android:hint="@string/enter_contact_hint"
                        android:inputType="phone"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp">

                    <EditText
                        android:id="@+id/et_username_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:ellipsize="start"
                        android:hint="@string/enter_username_hint"
                        android:inputType="textCapWords"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent">

                    <EditText
                        android:id="@+id/et_password_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:ellipsize="start"
                        android:hint="@string/enter_password_hint"
                        android:inputType="textPassword"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent">

                    <EditText
                        android:id="@+id/et_password_confirmation_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:ellipsize="start"
                        android:hint="@string/re_enter_password_hint"
                        android:inputType="textPassword"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="56dp"
                    android:layout_marginStart="56dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rectangle_button"
                    android:foregroundGravity="center_horizontal"
                    android:text="@string/sign_up_button_text"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/signup_loading_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="56dp"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/signup_loading_animation"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_animation" />

        <TextView
            android:id="@+id/signup_loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_loading_animation"
            android:layout_centerHorizontal="true"
            android:textColor="#CCFFFFFF" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>