<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/scan_event_qr_code"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

        <SurfaceView
            android:id="@+id/camera_preview"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_margin="32dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/scan_event_or"
            android:textAlignment="center"
            android:textColor="#616161"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/event_id_prompt"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_event_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:hint="@string/event_id_hint"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_enter_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rectangle_button"
            android:text="@string/enter_event_button"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/event_loading_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="56dp"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/event_loading_animation"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_animation" />

        <TextView
            android:id="@+id/event_loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_loading_animation"
            android:layout_centerHorizontal="true"
            android:textColor="#CCFFFFFF" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>