<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_close"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="12dp"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="@drawable/ic_close"/>

<android.support.constraint.ConstraintLayout
    android:layout_centerInParent="true"
    android:id="@+id/loginScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:src="@drawable/eventologo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/signupContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/sign_in_to_continue_text"
            android:textColor="#616161"
            android:textSize="16sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:ellipsize="start"
                android:hint="@string/email_id_hint"
                android:inputType="textEmailAddress"
                android:shadowColor="@color/colorAccent"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:ellipsize="start"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:shadowColor="@color/colorAccent"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="56dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rectangle_button"
            android:foregroundGravity="center_horizontal"
            android:text="@string/sign_in_button"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signupContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/double_rounded_rectangle_background"
        android:elevation="48dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:transitionName="SwipeUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_expand_more_arrow"
            app:layout_constraintBottom_toTopOf="@+id/signupContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:foregroundGravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:text="@string/swipe_up_text"
                android:textColor="#616161" />

            <TextView
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sign_up_text"
                android:textColor="#2196F3" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

    <RelativeLayout
        android:layout_centerInParent="true"
        android:id="@+id/signup_loading_screen"
        android:visibility="invisible"
        android:gravity="center"
        android:elevation="56dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/signup_loading_animation"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:layout_centerInParent="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_animation" />

        <TextView
            android:id="@+id/signup_loading_text"
            android:layout_below="@id/signup_loading_animation"
            android:textColor="#CCFFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</RelativeLayout>